2008-07-15  Bruno Haible  <bruno@clisp.org>

	* encoding.d: Verify already at compile time that HAVE_GOOD_ICONV is set
	rather than crashing at initialization time.

2008-07-15  Bruno Haible  <bruno@clisp.org>

	* makemake.in (clean4): Don't remove all the $SUBDIRS but only the built
	files inside them.

2008-07-15  Sam Steingold  <sds@gnu.org>

	* spvw_debug.d (nobject_out1): updated hash-table output for the
	removal of the ht_freelist (2004-05-09 1.49 2004/06/04)

2008-07-15  Sam Steingold  <sds@gnu.org>

	* encoding.d (CONVERT-STRING-FROM-BYTES): check (cptr == cendptr)
	after (bptr == bendptr)

2008-07-15  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (number_of_conditions_defined_in_c): rename from
	condition_for_broken_compilers_that_dont_like_trailing_commas
	* error.d (SYSTEM::%DEFCLCS): use it to check whether the argument
	is consistent with constsym.d

2008-07-14  Sam Steingold  <sds@gnu.org>

	src/m4/sigsegv.m4 --> src/glm4/libsigsegv.m4
	* Makefile.devel (gnulib-imported): also import libsigsegv
	* configure: use gl_cv_lib_sigsegv instead of cl_cv_lib_sigsegv
	* configure.in: use gl_LIBSIGSEGV instead of CL_SIGSEGV
	* lispbibl.d: use HAVE_LIBSIGSEGV instead of NO_SIGSEGV
	* makemake.in (XCFLAGS): do not add NO_SIGSEGV
	* src/m4/sigsegv.m4: remove
	* src/glm4/libsigsegv.m4: add
	* gllib/Makefile.am, glm4/gnulib-cache.m4, glm4/gnulib-comp.m4:
	regenerate

2008-07-13  Sam Steingold  <sds@gnu.org>

	* error.d (error_illegal_arg): new function
	* lispbibl.d (error_illegal_arg): declare
	* constobj.d (type_buffered_arg): add for stream.d:test_buffered_arg
	* stream.d (test_buffered_arg, test_eltype_arg, check_float_eltype):
	use error_illegal_arg
	* encoding.d (MAKE-ENCODING): ditto
	* pathname.d (check_direction, check_if_does_not_exist)
	(check_if_exists, DIRECTORY): ditto
	* hashtabl.d: fix an error message case

2008-07-13  Sam Steingold  <sds@gnu.org>

	* encoding.d (base64_wcstombs): set CHARSET-TYPE-ERROR slots DATUM
	and EXPECTED-TYPE